[package]
name = "pavex-session"
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }



[dependencies]
flysystem = { version = "0.1.3", default-features = false, features = ["local"] }
